<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tvScan"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_scan_qr_code"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvWishList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/tv_wishlist"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvUserProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/tv_user_profile"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/tv_change_password"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/tv_log_out"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>