<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        
        <variable
            name="viewModel"
            type="com.tanvi.healthpal.ui.authentication.LoginViewModel" />
        
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tv_login"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_15ssp"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailId"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{viewModel.errorEmailId}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_enter_your_email_id"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailId}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:errorText="@{viewModel.errorPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmailId"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                app:passwordToggleEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/color_one"
            android:onClick="@{viewModel::onClick}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGoToForgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvGoToForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forgot_password"
            android:textColor="@color/color_one"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_13ssp"
            android:onClick="@{viewModel::onClick}"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvGoToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_don_t_have_an_account"
            android:textColor="@color/color_three"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>