<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        
        <variable
            name="viewModel"
            type="com.tanvi.healthpal.ui.changepassword.ChangePasswordViewModel" />
        
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tv_change_password"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_15ssp"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:errorText="@{viewModel.errorPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                app:passwordToggleEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:errorText="@{viewModel.errorConfirmPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmPassword}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                app:passwordToggleEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_save"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/color_one"
            android:onClick="@{viewModel::onClick}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>