<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.tanvi.healthpal.ui.authentication.SignupViewModel" />

    </data>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tv_sign_up"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_15ssp"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{viewModel.errorFullName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignup"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_full_name"
                android:inputType="text"
                android:text="@={viewModel.fullName}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCountryCode"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilFullName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietCountryCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_country_code"
                android:inputType="number"
                android:text="+1"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContactNumber"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{viewModel.errorMobileNumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tilCountryCode"
            app:layout_constraintTop_toBottomOf="@+id/tilFullName"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:text="@={viewModel.mobileNumber}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailId"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{viewModel.errorEmailId}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilContactNumber"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_enter_your_email_id"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailId}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:errorText="@{viewModel.errorPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmailId"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                app:passwordToggleEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:errorText="@{viewModel.errorConfirmPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmPassword}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                app:passwordToggleEnabled="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{viewModel.errorAddress}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/hint_address_optional"
                android:inputType="text"
                android:text="@={viewModel.address}"
                android:textColor="@color/color_three"
                android:textColorHint="@color/color_two"
                android:textCursorDrawable="@null"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up"
            android:textColor="@color/white"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/color_one"
            android:onClick="@{viewModel::onClick}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddress"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_already_have_an_account"
            android:textColor="@color/color_three"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignup"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>